Fix title block visibility on home page
- Add title: false to index.qmd frontmatter
- Expand CSS selectors to hide all Quarto title block variants

--- a/styles.scss
+++ b/styles.scss
@@ -3,7 +3,14 @@
 /* Hide default Quarto title block on home page */
 .home .quarto-title-block,
 .home .quarto-title-meta,
-.home #title-block-header {
+.home #title-block-header,
+.home .quarto-title,
+.home .quarto-title-author-name,
+.home .quarto-title-meta-heading,
+.home .quarto-title-meta-contents,
+#quarto-content > #quarto-document-content > .quarto-title-block,
+#title-block-header,
+.quarto-title-block:first-child {
   display: none !important;
 }
 
